# bind-my-git

./: .env.development  .env.example  .gitignore  Dockerfile  README.md  create database project_management - 09.10.2025.txt  create database project_management.sql  create table public.sql  docker-compose.yml  index.html  package-lock.json  package.json  prompt.txt  tailwind.config.js  tailwind.config.ts  vite.config.ts
backend/: Dockerfile  README.md  main.py  pytest.ini  requirements.txt
config/: keycloak-realm.json
database/: 00-setup.sql  01-add-customers.sql  02-add-orders.sql  03-add-notifications.sql  RUN-MIGRATION.md  init.sql  manual-notifications-migration.sql
docker/: docker-compose.yml
docs/: API.md  AUTHENTICATION_VALIDATION.md  CSP_SOLUTION_SUMMARY.md  DATABASE_SETUP.md  DOCKER_SETUP.md  IFRAME_ELIMINATION_FIX.md  IFRAME_FREE_MIGRATION.md  INTEGRATION_VALIDATION_REPORT.md  KEYCLOAK_CSP_FIX.md  KEYCLOAK_SETUP.md  LOCALIZATION_GUIDE.md  README.md  WEBAUTHN_IFRAME_BLOCKER_FIX.md  alternative-csp-solutions.md  (+8 more)
importer/sap_business_one/: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
importer/sap_business_one/src/sap_business_one/: __main__.py
importer/sap_business_one/src/sap_business_one/database/: connection.py  sync.py
importer/sap_business_one/src/sap_business_one/models/: business_partners.py  customers.py  items.py  orders.py
importer/sap_business_one/src/sap_business_one/tools/: __init__.py  business_partners.py  orders.py
importer/sap_business_one/src/sap_business_one/utils/: session.py  settings.py
src/: index.css  (+1 more)
(+206 files in other folders)
